--- a/.jmacsrc
+++ b/.jmacsrc
@@ -1,5 +1,6 @@
 
                          Initialization file for JOE
+                                Gnu-Emacs Joe
 
  JOE looks for this file in:
 	1 - .joerc
@@ -103,6 +104,13 @@
 	-keymap name		Keymap to use if not 'main'
 	-lmsg			Status line definition strings-
 	-rmsg			see previous section for more info.
+	-mnew macro		Macro to execute when new files are loaded
+	-mold macro		Macro to execute when existing files are loaded
+	-msnew macro		Macro to execute when new files are saved
+	-msold macro		Macro to execute when existing files are saved
+
+	Macros for the above options are in the same format as in the key
+	binding section below- but without the key name strings.
 
 *
 -wordwrap
