delete unused files from distribution

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,13 +2,12 @@ AUTOMAKE_OPTIONS = foreign
 
 EXTRA_DIST = COPYING INFO LIST NEWS README README.cvs TODO docs/help-system.html \
 	joerc.in jmacsrc.in jstarrc.in rjoerc.in jpicorc.in \
-	joe.1.in chain.asm dir.c kbdhdl.c msscrn.c mstty.c \
-	termcap terminfo \
+	joe.1.in dir.c \
 	docs
 
 sysconf_DATA = joerc jmacsrc jstarrc rjoerc jpicorc
 man_MANS = joe.1
-noinst_HEADERS = b.h blocks.h bw.h cmd.h config.h hash.h help.h kbd.h kbdhdl.h \
+noinst_HEADERS = b.h blocks.h bw.h cmd.h config.h hash.h help.h kbd.h \
 	macro.h main.h menu.h path.h poshist.h pw.h queue.h qw.h rc.h regex.h \
 	scrn.h tab.h termcap.h tty.h tw.h ublock.h uedit.h uerror.h ufile.h \
 	uformat.h uisrch.h umath.h undo.h usearch.h ushell.h utag.h utils.h \
