include <limits.h> if available to get PATH_MAX

--- a/configure.ac
+++ b/configure.ac
@@ -40,7 +40,7 @@ AC_HEADER_TIOCGWINSZ
 AC_CHECK_HEADERS([errno.h fcntl.h locale.h sgtty.h stdlib.h string.h])
 AC_CHECK_HEADERS([sys/ioctl.h sys/param.h sys/time.h unistd.h utime.h])
 AC_CHECK_HEADERS([ncurses.h curses.h sys/dirent.h time.h pwd.h paths.h])
-AC_CHECK_HEADERS([term.h sys/types.h sys/stat.h sys/wait.h])
+AC_CHECK_HEADERS([term.h sys/types.h sys/stat.h sys/wait.h limits.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_PROTOTYPES
