--- a/Makefile.am
+++ b/Makefile.am
@@ -20,7 +20,7 @@ INCLUDES = -DJOERC="\"@sysconfdir@/\""
 joe_SOURCES = b.c blocks.c bw.c cmd.c hash.c help.c kbd.c macro.c main.c menu.c \
 	path.c poshist.c pw.c queue.c qw.c rc.c regex.c scrn.c tab.c termcap.c \
 	tty.c tw.c ublock.c uedit.c uerror.c ufile.c uformat.c uisrch.c umath.c \
-	undo.c usearch.c ushell.c utag.c va.c vfile.c vs.c w.c utils.c
+	undo.c usearch.c ushell.c utag.c va.c vfile.c vs.c w.c utils.c syntax.c
 
 termidx_SOURCES = termidx.c
 
