Clean up meaning of default color.
Allow syntax to be specified in joerc file: "-syntax perl"

Add class definitions to syntax files.

Add perl and verilog definitions (they need work).

Change joerc to assume files with . in their name do not want word
wrap enabled (except for .txt).

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ AUTOMAKE_OPTIONS = foreign
 
 EXTRA_DIST = COPYING INFO LIST NEWS README README.cvs TODO docs/help-system.html \
 	joerc.in jmacsrc.in jstarrc.in rjoerc.in jpicorc.in \
-	joe.1.in dir.c c.jsf.in \
+	joe.1.in dir.c c.jsf.in perl.jsf.in verilog.jsf.in \
 	docs
 
 sysconf_DATA = joerc jmacsrc jstarrc rjoerc jpicorc c.jsf
