Added -notite global option: when set, prevents screen from 	being restored on exit.
	Added -usetabs global option: when set, uses tabs for cursor
	position update (which was the default before).  Now we don't
	use tabs by default.

        Completed change to 'unsigned char *' and elimination of
        MAXINT.  What a mess.  No warnings with gcc -pedantic.

	Fix UTF-8 bugs where cursor was not correct on scrolled screen.

--- a/joerc.in
+++ b/joerc.in
@@ -65,6 +65,11 @@
 
  -skiptop nnn	Don't use top nnn lines of the screen
 
+-notite         Don't send terminal initialization and termination strings: prevents
+                restoration of screen on exit.
+
+ -usetabs       Use tabs to help optimize screen update.
+
  -rmsg defines the right-justified string.  The first character of -rmsg is
  the background fill character.  The following escape sequences can be used
  in these strings:
@@ -117,10 +122,14 @@
  Here are the modes which can be set:
 
 	-encoding name		Set file coding (for example: utf-8, iso-8859-15)
+	-utf8			File is UTF-8 coded
+	-syntax name		Specify syntax (syntax file called
 	-syntax name		Specify syntax (syntax file called 'name.jsf' will be loaded)
 	-hex			Hex editor mode
 
 	-smarthome		Home key first moves cursor to beginning of line,
+
+	-wordwrap		Wordwrap
 
 	-autoindent		Auto indent
 
