--- a/Makefile.am
+++ b/Makefile.am
@@ -2,10 +2,13 @@ AUTOMAKE_OPTIONS = foreign
 
 EXTRA_DIST = COPYING INFO LIST NEWS README README.cvs TODO docs/help-system.html \
 	joerc.in jmacsrc.in jstarrc.in rjoerc.in jpicorc.in \
-	joe.1.in dir.c c.jsf.in perl.jsf.in verilog.jsf.in \
+	joe.1.in dir.c syntax/c.jsf.in syntax/perl.jsf.in syntax/verilog.jsf.in \
+	syntax/conf.jsf.in syntax/python.jsf.in syntax/php.jsf.in syntax/sh.jsf.in \
 	docs
 
-sysconf_DATA = joerc jmacsrc jstarrc rjoerc jpicorc c.jsf
+sysconf_DATA = joerc jmacsrc jstarrc rjoerc jpicorc syntax/c.jsf syntax/perl.jsf \
+	syntax/verilog.jsf syntax/conf.jsf syntax/python.jsf syntax/php.jsf \
+	syntax/sh.jsf
 man_MANS = joe.1
 noinst_HEADERS = b.h blocks.h bw.h cmd.h config.h hash.h help.h kbd.h \
 	macro.h main.h menu.h path.h poshist.h pw.h queue.h qw.h rc.h regex.h \
