Fixed uopen() ^] for overtype mode.
Added 'istrings' option in syntax files for ignoring case
in strings.

Added ^T Y- allows you to select syntax during run time (tab
completion works too!)

Added ^T P- picture mode: can move and type anywhere on the screen,
good for drawing ASCII art.

--- a/syntax/c.jsf.in
+++ b/syntax/c.jsf.in
@@ -42,6 +42,8 @@
 #		given strings, a jump to the target-state in the string list
 #		is taken instead of the normal jump.
 #
+#   istrings	Same as strings, but case is ignored.
+#
 #   The format of the string list is:
 #
 #      "string"   <target-state>
